# speeracy

./: .gitignore  pyproject.toml
data_processing/: Dockerfile  Untitled-1.ipynb  data.json
libs/speeracy-cli/: pyproject.toml
libs/speeracy-cli/src/speeracy_cli/: __init__.py
libs/speeracy-core/: pyproject.toml
libs/speeracy-core/src/speeracy_core/: __init__.py
libs/speeracy-server/: pyproject.toml
src/speeracy/: __init__.py
