[project]
name = "speeracy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
cli = [
    "speeracy-cli",
]
server = [
    "speeracy-server",
]

[tool.uv.sources]
speeracy-core = { workspace = true }
speeracy-cli = { workspace = true }
speeracy-server = { workspace = true }

[tool.uv.workspace]
members = ["libs/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "ipykernel>=6.29.5",
    "notebook>=7.3.2",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]
