[project]
name = "speeracy-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.20.0",
    "niquests>=3.12.1",
    "scikit-learn>=1.6.1",
    "networkx>=3.4.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"