[project]
name = "speeracy-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jonathan Scheer", email = "jonatron@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "speeracy-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"